--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "express": "^4.15.3",
+    "express-validator": "^3.2.1",
     "hbs": "^4.0.1",
     "mysql": "^2.13.0"
   }
