--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
   "author": "Michel Heiniger",
   "license": "GPL-3.0",
   "dependencies": {
+    "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
     "express-validator": "^3.2.1",
     "hbs": "^4.0.1",
     "mysql": "^2.13.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.3.0",
+    "eslint-config-airbnb-base": "^11.3.1",
+    "eslint-plugin-import": "^2.7.0"
   }
 }
